# Algebra-modules

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
csv_dump/: kronecker-display.csv  kronecker-test-log.csv  non-bijective-log.csv  s5-order-orbit-log.csv
csv_dump/non optimized display/: unit-kronecker-log.csv
lib/: __init__.py  group_testing.py  matrix_testing.py
lib/source/: __init__.py  equations.py  group.py  matrix.py
source/: equations.py  group.py  matrix.py
src/algch_chris_mzz/: __init__.py  equations.py  matrix.py
temp_main/: matrix_testing.py
