[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algch_chris_mzz"
version = "0.0.3"
authors = [
  { name="Christopher Mazzerbo", email="christopher.mazzerbo@etu.univ-amu.fr" },
]
description = "An Algebra package I use to correct exercises (tutorial build)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChrisMzz/algch"
"Bug Tracker" = "https://github.com/ChrisMzz/algch/issues"